Fixed missing ssl library